# onlineboutique

./: colocated.toml  go.mod  go.sum  weaver.toml
frontend/: frontend.go  weaver_gen.go
util/work_generator/: Cargo.toml
util/work_generator/mixes/: default.json
util/work_generator/src/: lib.rs  main.rs  request.rs  units.rs
util/workgenerator/: Cargo.toml  build.rs
util/workgenerator/src/: lib.rs  request.rs  units.rs
