[package]
name = "work_generator"
version = "0.1.0"
edition = "2021"
default-run = "work_generator"

[dependencies]
anyhow = "1.0.86"
async-timer = { version = "1.0.0-beta.14", features = ["tokio1"] }
axum = "0.7.5"
bon = "1.2.1"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive", "suggestions"] }
csv = "1.3.0"
fake = { version = "2.9.2", features = ["derive"] }
nutype = { version = "0.4.3", features = ["serde"] }
rand = "0.8.5"
rand_distr = "0.4.3"
reqwest = "0.12.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.127"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }

[build-dependencies]
anyhow = "1.0.86"
serde = "1.0.204"
serde_json = "1.0.122"

[[bin]]
name = "nop_server"
path = "src/bin/nop_server.rs"
