[package]
name = "workgenerator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bon = "1.2.1"
chrono = "0.4.38"
fake = { version = "2.9.2", features = ["derive"] }
nutype = { version = "0.4.3", features = ["serde"] }
rand = "0.8.5"
rand_distr = "0.4.3"
reqwest = "0.12.5"
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }

[build-dependencies]
anyhow = "1.0.86"
serde = "1.0.204"
serde_json = "1.0.122"
